2008-01-17  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-config.c: (dump_keys), (dump_sections),
	(dump_sections_to_file), (dump_profile): Make this more
	robust against full disk situations. Patch from edpeur at gmail com
	Closes bug #507687.
	* libgnome/libgnome-2.0.pc.in: Add localstatedir variable so
	we can tell where gnome-games should look for highscore files.
	Closes some bug I can't find :-/

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_finalize):
	Free list of accessibility modules. Closes bug #483770.

2008-01-08  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_accessibility_keyboard.schemas.in:
	* schemas/desktop_gnome_accessibility_startup.schemas.in:
	* schemas/desktop_gnome_applications_at_mobility.schemas.in:
	* schemas/desktop_gnome_applications_at_visual.schemas.in:
	* schemas/desktop_gnome_applications_browser.schemas.in:
	* schemas/desktop_gnome_applications_terminal.schemas.in:
	* schemas/desktop_gnome_background.schemas.in.in:
	* schemas/desktop_gnome_file_views.schemas.in:
	* schemas/desktop_gnome_interface.schemas.in.in:
	* schemas/desktop_gnome_peripherals_keyboard.schemas.in:
	* schemas/desktop_gnome_peripherals_mouse.schemas.in:
	Add missing «.» to all long descriptions.
	Closes bug #100287. Reported by Christian Rose.
	
2007-12-18  Christian Persch  <chpe@gnome.org>

	* schemas/desktop_gnome_interface.schemas.in.in: Add setting for the
	GTK IM module. Bug #504184, patch by Akira TAGOH.

2007-12-16  Christian Persch  <chpe@gnome.org>

	* schemas/Makefile.am:
	R schemas/desktop_gnome_applications_help_viewer.schemas.in:
	Remove the unused, obsolete and buggy schema for the help viewer app.
	Bug #437827.

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* schemas/desktop_gnome_interface.schemas.in.in: replace the defunct
	toolbar_icon_size integer setting with a string setting and rename it
	so it doesn't conflict with the old one. Bug #401030.
