@@ -1,3 +1,8 @@
+2008-01-22  Tor Lillqvist  <tml@novell.com>
+
+	* libgnome-zip.in: Look for catalogs in share/locale first, as
+	that is where they will be with a properly built GNU gettext.
+
 2008-01-17  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnome/gnome-config.c: (dump_keys), (dump_sections),
